# operationfluff

./: .travis.yml  README.md  check.sh  mypy.ini  pyproject.toml
operation_fluff/: dog_finder.py  emailer.py  main.py  query.py  texter.py
tests/: test_dog_finder.py  test_emailer.py  test_main.py  test_operation_fluff.py  test_texter.py
tests/cassettes/: test_get_dogs.yaml  test_get_dogs_since.yaml
