[tool.poetry]
name = "operation-fluff"
version = "0.1.0"
description = ""
authors = ["Matt Bachmann <bachmann.matt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sendgrid = "^6.4.7"
requests = "^2.24.0"
pytz = "^2020.1"
pytest-vcr = "^1.0.2"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
vcrpy = "^4.1.0"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
