[tool.poetry]
name = "operation-fluff"
version = "0.1.0"
description = ""
authors = ["Matt Bachmann <bachmann.matt@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.7"
sendgrid = "^6.4.7"
requests = "^2.24.0"
pytz = "^2021.1"
pytest-vcr = "^1.0.2"
jinja2 = "^3.0.1"
twilio = "^7.0.0"
retry = "^0.9.2"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
vcrpy = "^4.1.0"
pytest-cov = "^2.10.1"
mypy = "^0.910"
freezegun = "^1.0.0"
pytest-mock = "^3.3.1"
fakeredis = "^1.6.1"
isort = "^5.9.3"
types-requests = "^2.25.9"
types-redis = "^3.5.8"
types-retry = "^0.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
